# thecryptofrontier-eng

./: .gitignore  .npmrc  CLAUDE.md  check_sanity_keys.py  chromatic.config.json  components.json  find_missing_keys.py  fix_missing_keys.py  healthcheck.js  jest.config.js  jest.setup.js  netlify.toml  next.config.js  package-lock.json  package.json  page.html  sanity-codegen.config.ts  sanity.config.ts  tailwind.config.js  test_key_validation_simple.py  tsconfig.json  tsconfig.script.json
framework_crewai/blog_crew/: .dockerignore  .gitignore  CLEANUP_SUMMARY.md  DOCKER_QUICK_START.md  Dockerfile  Makefile  PIPELINE_ISSUE_ANALYSIS.md  README.md  README_DOCKER.md  __init__.py  build.sh  check_posts_status.py  clean_json_files.sh  clean_old_logs.sh  corrected_xrp_content.json  create_xrp_post.py  create_xrp_post_with_keys.py  crew.py  crew_with_callbacks.py  crewai.yaml  crontab_config  daily_pipeline.sh  dashboard_streamlit.py  direct_fix_links.py  docker-compose.yml  docker-entrypoint.sh  exemplo_post_formatado.json  feeds.json  fix_duplicate_processing.sh  fix_post_patch.json  fix_xrp_post_links.py  image_generation_queue.json  install_enhanced_deps.sh  monitor_service.py  processed_articles.json  publish_all_with_images.py  pyproject.toml  requirements-enhanced.txt  requirements-minimal.txt  requirements.txt  (+22 more)
framework_crewai/blog_crew/agents/: __init__.py  formatter_agent.py  image_generator_agent.py  indexer_agent.py  monitor_agent.py  publisher_agent.py  translator_agent.py
framework_crewai/blog_crew/config/: __init__.py  agent_post_config.py  agents.yaml  (+5 more)
(+319 files in other folders)
