[project]
name = "blog_crew"
version = "0.1.0"
description = "CrewAI para automação de blog"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.28.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "unidecode>=1.3.7",
]

[project.scripts]
run_crew = "run_crew:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]